# serializer version: 1
# name: test_sensors.4
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'configuration_url': 'https://warnungen.zamg.at/wsapp/de/alle/gesamterzeitraum/0/16.35640,48.24860',
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': <DeviceEntryType.SERVICE: 'service'>,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'geosphere_austria_warnings',
        '30740',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'GeoSphere Austria',
    'model': None,
    'model_id': None,
    'name': 'Schwechat',
    'name_by_user': None,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_sensors[sensor.schwechat_active_warnings-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.schwechat_active_warnings',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Active warnings',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Active warnings',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'active_warnings',
    'unique_id': '30740-active_warnings',
    'unit_of_measurement': 'warnings',
  })
# ---
# name: test_sensors[sensor.schwechat_active_warnings-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by GeoSphere Austria',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Schwechat Active warnings',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'warnings',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.schwechat_active_warnings',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensors[sensor.schwechat_warning_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'none',
        'yellow',
        'orange',
        'red',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.schwechat_warning_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Warning level',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Warning level',
    'platform': 'geosphere_austria_warnings',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'warning_level',
    'unique_id': '30740-warning_level',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.schwechat_warning_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by GeoSphere Austria',
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Schwechat Warning level',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'none',
        'yellow',
        'orange',
        'red',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.schwechat_warning_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'orange',
  })
# ---
